Prevent laoding button from collapsing to fixed width

--- a/src/amo/pages/Addon/styles.scss
+++ b/src/amo/pages/Addon/styles.scss
@@ -117,12 +117,6 @@
   width: 100%;
 }
 
-.Addon .AMInstallButton-loading-button {
-  @include respond-to(medium) {
-    width: 48px;
-  }
-}
-
 // Details section with lots of grid stuff, on larger displays.
 @include respond-to(large) {
   .Addon-screenshots {
